--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,8 @@ quilt_loader = "0.17.1"
 
 quilted_fabric_api = "4.0.0-beta.7+0.59.0-1.19.2"
 cardinal_components_api = "5.0.1"
+trinkets = "3.4.0"
+modmenu = "4.0.6"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
@@ -16,6 +18,9 @@ quilted_fabric_api = { module = "org.quiltmc.quilted-fabric-api:quilted-fabric-a
 
 cardinal_components_api_base = { module = "dev.onyxstudios.cardinal-components-api:cardinal-components-base", version.ref = "cardinal_components_api" }
 cardinal_components_api_entity = { module = "dev.onyxstudios.cardinal-components-api:cardinal-components-entity", version.ref = "cardinal_components_api" }
+
+trinkets = { module = "dev.emi:trinkets", version.ref = "trinkets" }
+modmenu = { module = "com.terraformersmc:modmenu", version.ref = "modmenu" }
 
 [bundles]
 cardinal_components_api = ["cardinal_components_api_base", "cardinal_components_api_entity"]
