--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,7 +43,7 @@ jobs:
 
           # Config
           name: Bella v1.1.0 (Quilt 1.19.2)
-          version: v1.1.0+1.19.2
+          version: 1.1.0+1.19.2
           version-type: release
           changelog-file: CHANGELOG.md
           files-primary: build/libs/!(*-@(dev|sources)).jar
@@ -72,7 +72,7 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
           name: Bella v1.1.0 (Quilt 1.19.2)
-          version: v1.1.0+1.19
+          version: 1.1.0+1.19.2
           version-type: release
           changelog-file: CHANGELOG.md
 
