List Trinkets as an optional dependency to release script

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,6 +55,7 @@ jobs:
             1.19.2
           dependencies: |
             qsl | depends | *
+            trinkets | recommends | *
           java: |
             17
 
@@ -82,6 +83,7 @@ jobs:
             1.19.2
           dependencies: |
             qsl | depends | *
+            trinkets | recommends | *
           java: |
             17
 
